# vPLC-runtime

./: .gitignore  CMakeLists.txt  README.md  instructions.md  mappings.json  setup_deps.sh  tags.json  test_mc.py  test_modbus.py  test_s7.cpp  test_xgt.py
.antigravitycli/: 202b557c-e8fa-4384-a25a-ccfea13ef6a1.json
docs/: implementation_plan.md  mapping_engine_guide.md  task.md  walkthrough.md
scratch/: test_assembly_mc.py  test_assembly_s7.cpp  test_assembly_xgt.py  test_continuous_xgt.py  test_tank_mc.py  test_tank_modbus.py  test_tank_pyxgt.py  test_tank_pyxgt_real.py  test_tank_s7.cpp  test_tank_xgt.py
src/: main.cpp
src/core/: PlcLoader.cpp  PlcLoader.hpp  PlcMemory.cpp  PlcMemory.hpp  PlcScheduler.cpp  PlcScheduler.hpp  PlcTagManager.cpp  PlcTagManager.hpp
src/logic/: assembly_logic.cpp  mock_logic.cpp  trim_logic.cpp
src/mc/: McServer.cpp  McServer.hpp
src/modbus/: ModbusServer.cpp  ModbusServer.hpp
src/mqtt/: MqttPublisher.cpp  MqttPublisher.hpp
src/s7/: S7Server.cpp  S7Server.hpp
src/tui/: PlcTui.cpp  PlcTui.hpp
src/web/: WebServer.cpp  WebServer.hpp  WebUI.hpp
src/xgt/: XgtServer.cpp  XgtServer.hpp
